added some links
added links

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -26,7 +26,7 @@ body {
   font-weight: 700;
   margin-inline-start: 2rem;
 }
-.bar__icon__search {
+.icon__github {
   border: 2px solid royalblue;
   margin-inline-end: 1.5rem;
 }
