--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -3,12 +3,15 @@ body {
   padding: 0;
 }
 
+@media screen and (min-width: 800px) {
+  .bar {
+    padding-inline: 5rem;
+  }
+}
 .bar {
   display: flex;
   align-items: center;
-  flex-shrink: 1;
   justify-content: space-between;
-  padding-inline: 1rem;
   background-color: rgb(255, 220, 0);
   border: 2px solid red;
 }
@@ -21,12 +24,14 @@ body {
 .bar__icon {
   border: 2px dashed black;
   display: flex;
-  flex-shrink: 0;
-  font-size: 1.2rem;
-  font-weight: 700;
   margin-inline-start: 2rem;
 }
-.icon__github {
-  border: 2px solid royalblue;
+
+.icon__search {
   margin-inline-end: 1.5rem;
+}
+
+.bar__icon--style {
+  font-size: 1.3rem;
+  font-weight: 700;
 }
