--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -18,6 +18,7 @@ body {
   }
 }
 
+/* Heading */
 .bar {
   display: flex;
   align-items: flex-start;
@@ -34,7 +35,6 @@ body {
 }
 
 .bar__icon {
-  border: 2px dashed black;
   display: flex;
   margin-block-start: 1rem;
 }
@@ -48,11 +48,9 @@ body {
   margin-inline-end: 1.5rem;
 }
 
-.bar__icon--style {
-  font-size: 1.3rem;
-  font-weight: 700;
-}
+/* Slutt av heading */
 
+/* Start av hovedsiden */
 .page {
   border: 5px solid black;
 }
@@ -61,20 +59,30 @@ body {
   width: 100%;
 }
 
-.page h3,
-p {
-  line-height: 0.1rem;
+.page__table {
+  width: 100%;
+}
+.page__table tr {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid black;
+  padding-block: 2rem 1rem;
 }
 
-.page p {
-  margin-block-end: 2rem;
-  font-size: 1.1rem;
+.page__table th,
+.page__table td {
+  line-height: 1;
+  font-size: 1.2rem;
+  text-align: left;
+  width: 100%;
 }
-.page h3 {
-  margin-block-start: 3rem;
-}
-.page hr {
-  border: 1px solid rgb(151, 151, 151);
+
+/* Slutt av hovedsiden */
+
+/* Styling */
+.bar__icon--style {
+  font-size: 1.3rem;
+  font-weight: 700;
 }
 
 .left__studie--style {
