--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,23 +5,22 @@ body {
 
 @media screen and (min-width: 800px) {
   .bar {
-    padding-inline: 5rem;
+    padding-inline: 4rem;
   }
   .page {
     margin-block-start: 3rem;
     margin-inline: 4rem;
   }
   .bottom {
-    padding-inline: 3rem;
+    padding-inline: 4rem;
   }
 }
 @media screen and (max-width: 800px) {
-  .page {
+  .page,
+  .bottom {
     padding: 1rem;
   }
-  .bottom {
-    padding-inline: 1rem;
-  }
+
   .bottom__page {
     display: flex;
     flex-direction: column;
@@ -65,13 +64,11 @@ body {
   border: 1px solid black;
 }
 
-.page__image {
-  width: 100%;
-}
-
+.page__image,
 .page__table {
   width: 100%;
 }
+
 .page__table tr {
   display: flex;
   flex-direction: column;
@@ -93,7 +90,6 @@ body {
 
 .bottom {
   background-color: rgb(255, 220, 0);
-  padding-inline: 1rem;
 }
 
 .bottom__upper {
@@ -112,6 +108,7 @@ body {
 .bottom__page {
   display: flex;
   justify-content: space-evenly;
+  margin-block-start: 1rem;
 }
 
 .bottom__tableLeft,
@@ -119,6 +116,7 @@ body {
 .bottom__tableRight {
   max-width: fit-content;
   text-align: left;
+  margin-block-end: 1rem;
 }
 
 .bottom__tableLeft tr {
@@ -131,21 +129,28 @@ body {
 .bottom__tableRight th {
   display: flex;
   flex-direction: column;
+  max-width: fit-content;
+}
+
+.bottom__tableRight a {
+  display: flex;
+  align-items: center;
+}
+.bottom__tableRight i {
+  padding-inline-end: 0.5rem;
+}
+.bottom__page a {
+  color: black;
+  text-decoration: none;
+}
+.bottom__page a:hover {
+  text-decoration: underline;
 }
 
 /* Icons  */
-.fa {
-  padding: 20px;
-  text-align: center;
-  margin: 5px 2px;
-  font-size: 30px;
-  width: 50px;
+.fa-brands {
+  font-size: 2rem;
 }
-.fa-facebook {
-  background: #3b5998;
-  color: white;
-}
-
 /* Slutten av footer */
 
 /* Styling */
@@ -158,4 +163,9 @@ body {
   color: black;
   font-size: 1.2rem;
   font-weight: 700;
+}
+
+.bottom__tableMiddle--style,
+.bottom__tableRight--style {
+  line-height: 1.5;
 }
