added to left side

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -38,19 +38,19 @@ body {
 .bar__image {
   width: 6rem;
 }
-.bar__left {
+.bar__right {
   display: flex;
   flex-direction: column;
 }
 
 .bar__icon {
   display: flex;
-  margin-block-start: 1rem;
+  align-items: center;
+  gap: 2rem;
 }
 
-.left__studie {
+.right__studie {
   padding-block: 1.5rem;
-  margin-inline-start: 2rem;
 }
 
 .icon__search {
@@ -68,23 +68,30 @@ body {
   display: inline-block;
 }
 
+.bar__dropdownbtn {
+  padding: 0.5rem 1rem;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
 .bar__dropdown-content {
   display: none;
   position: absolute;
-  text-align: right;
-  width: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  right: 0;
-  left: auto;
+  right: auto;
+  left: 0;
+  min-width: fit-content;
 }
 
 .bar__dropdown-content a {
   color: black;
-  padding: 0.2rem 0.5rem;
+  padding: 0.5rem;
   display: block;
   background-color: aqua;
-  text-align: right;
-  width: auto;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .bar__dropdown-content a:active {
@@ -203,7 +210,7 @@ body {
   font-weight: 700;
 }
 
-.left__studie--style {
+.right__studie--style {
   color: black;
   font-size: 1.2rem;
   font-weight: 700;
