--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -163,7 +163,7 @@ body {
 }
 
 .page__trekk-item input[type="checkbox"]:checked ~ .page__trekk-content {
-  max-height: 200px;
+  max-height: fit-content;
   padding: 15px;
 }
 
@@ -178,8 +178,29 @@ body {
 
 .page__elementer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  text-align: left;
+}
+.page__liste {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-block: 1rem;
+  gap: 1rem;
+  list-style-type: none;
+}
+.page__boks {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 2px solid #0077cc;
+  padding: 0.3rem 1rem;
+  text-align: center;
+  max-width: 100%;
+}
+
+.page__boks:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: #e6f7ff;
 }
 
 .page__grid-container {
