--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,7 +12,7 @@ body {
     margin-block-start: 3rem;
     margin-inline: 4rem;
   }
-  .bottom {
+  .footer {
     padding-inline: 4rem;
   }
   .page__liste {
@@ -22,12 +22,15 @@ body {
 }
 /* Legger til media query skjerm bredde for de med mindre bredde (mobilbrukere) */
 @media screen and (max-width: 800px) {
+  .bar {
+    padding-inline: 1rem;
+  }
   .page,
-  .bottom {
+  .footer {
     padding: 1rem;
   }
 
-  .bottom__page {
+  .footer__page {
     display: flex;
     flex-direction: column;
   }
@@ -60,37 +63,25 @@ body {
 /* Heading */
 .bar {
   display: flex;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: center;
   background-color: rgb(252, 221, 4);
 }
 
 .bar__image {
   width: 6rem;
 }
-.bar__right {
-  display: flex;
-  flex-direction: column;
-}
 
 .bar__icon {
   display: flex;
   align-items: center;
   gap: 2rem;
-}
-
-.right__studie {
-  padding-block: 1.5rem;
-}
-
-.icon__search {
-  margin-inline-end: 1.5rem;
+  padding: 0.5rem;
 }
 
 /* Dropdown knapp  */
 
 .bar__meny {
-  border: 2px solid red;
 }
 
 .bar__dropdown {
@@ -104,6 +95,7 @@ body {
   color: white;
   border: none;
   cursor: pointer;
+  transition: 0.3s ease;
 }
 
 .bar__dropdown-content {
@@ -112,14 +104,18 @@ body {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   right: auto;
   left: 0;
-  min-width: fit-content;
+}
+.bar__dropdownbtn:hover,
+.bar__dropdownbtn:active {
+  background-color: #444;
+  transform: scale(1.05);
 }
 
 .bar__dropdown-content a {
   color: black;
   padding: 0.5rem;
   display: block;
-  background-color: aqua;
+  background-color: rgb(252, 221, 4);
   text-align: left;
   white-space: nowrap;
 }
@@ -129,7 +125,7 @@ body {
 }
 
 .bar__dropdown-content a:hover {
-  background-color: blue;
+  background-color: #0056b3;
   border: 2px solid gray;
 }
 
@@ -309,62 +305,62 @@ body {
 
 /* Footer */
 
-.bottom {
+.footer {
   background-color: rgb(255, 220, 0);
 }
 
-.bottom__upper {
+.footer__upper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   border-bottom: 1px solid black;
 }
-.bottom__upper h2 {
+.footer__upper h2 {
   background-color: black;
   color: white;
   padding: 1rem;
 }
 
-.bottom__page {
+.footer__page {
   display: flex;
   justify-content: space-evenly;
   margin-block-start: 1rem;
 }
 
-.bottom__tableLeft,
-.bottom__tableMiddle,
-.bottom__tableRight {
+.footer__tableLeft,
+.footer__tableMiddle,
+.footer__tableRight {
   max-width: fit-content;
   text-align: left;
   margin-block-end: 1rem;
 }
 
-.bottom__tableLeft tr {
+.footer__tableLeft tr {
   display: flex;
   flex-direction: column;
   padding-block: 1rem;
 }
 
-.bottom__tableMiddle th,
-.bottom__tableRight th {
+.footer__tableMiddle th,
+.footer__tableRight th {
   display: flex;
   flex-direction: column;
   max-width: fit-content;
 }
 
-.bottom__tableRight a {
+.footer__tableRight a {
   display: flex;
   align-items: center;
 }
-.bottom__tableRight i {
+.footer__tableRight i {
   padding-inline-end: 0.5rem;
 }
-.bottom__page a {
+.footer__page a {
   color: black;
   text-decoration: none;
 }
-.bottom__page a:hover {
+.footer__page a:hover {
   text-decoration: underline;
 }
 
@@ -380,16 +376,11 @@ body {
   font-weight: 700;
 }
 
-.right__studie--style {
-  color: black;
-  font-size: 1.2rem;
-  font-weight: 700;
-}
 .page__boks--style {
   font-size: 1.2rem;
 }
 
-.bottom__tableMiddle--style,
-.bottom__tableRight--style {
+.footer__tableMiddle--style,
+.footer__tableRight--style {
   line-height: 1.5;
 }
