Page og styling
Accessibility page og styling

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -7,10 +7,7 @@ body {
   .bar {
     padding-inline: 5rem;
   }
-  .page {
-    margin-block-start: 3rem;
-    margin-inline: 4rem;
-  }
+
 }
 @media screen and (max-width: 800px) {
   .page {
@@ -51,10 +48,6 @@ body {
 /* Slutt av heading */
 
 /* Start av hovedsiden */
-.page {
-  border: 5px solid black;
-}
-
 .page__image {
   width: 100%;
 }
@@ -90,3 +83,49 @@ body {
   font-size: 1.2rem;
   font-weight: 700;
 }
+
+.main__title {
+margin-left: 5rem;
+}
+.head__img {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 200px);
+gap: 15px;
+float: right;
+position: relative;
+margin-right: 5rem;
+}
+
+.head__img img {
+object-fit: cover;
+width: 100%;
+height: 100%;
+transition: transform 0.3s ease;
+}
+
+.head__img img:hover {
+transform: scale(1.1);
+}
+
+.twoboxes {
+grid-column: span 2;
+}
+
+.top__page {
+background-image: url(../image/Bakgrunn_topp.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+height: 500px;
+width: 100%;
+}
+
+.page__aboutproject {
+text-align: left;
+width: 100%; 
+min-width: 40rem;
+max-width: 40rem; 
+padding: 30px;
+font-size: 1.2rem;
+}
+
