--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -445,7 +445,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -454,7 +454,7 @@ body {
 }
 
 .navbar {
-  background-color: #ffcc00;  
+  background-color: #ffcc00;
   padding: 15px 30px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -474,7 +474,7 @@ body {
 }
 
 .navbar__link {
-  color: black;  
+  color: black;
   text-decoration: none;
   font-size: 16px;
   font-weight: 500;
@@ -483,7 +483,7 @@ body {
 }
 
 .navbar__link:hover {
-  background-color: #e6b800; 
+  background-color: #e6b800;
   border-radius: 5px;
 }
 
@@ -522,7 +522,7 @@ body {
 }
 
 .navbar__dropdown-content a:hover {
-  background-color: #e6b800; 
+  background-color: #e6b800;
 }
 
 /* hvordan meny ser ut ved mobilvisning*/
@@ -559,7 +559,7 @@ body {
 
 .image-gallery__item {
   width: 100%;
-  max-width: 300px; 
+  max-width: 300px;
   height: auto;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -567,22 +567,20 @@ body {
 }
 
 .image-gallery__item:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
-
 
 @media (max-width: 768px) {
   .navbar__links {
-    display: none; 
+    display: none;
     flex-direction: column;
     width: 100%;
   }
 
   .navbar__toggle-label {
-    display: block; 
+    display: block;
   }
 
-  
   #menu-toggle:checked + .navbar__links {
     display: flex;
   }
@@ -597,6 +595,6 @@ body {
   }
 
   .navbar__links a:hover {
-    background-color: #e6b800; 
+    background-color: #e6b800;
   }
 }
