--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -27,6 +27,7 @@ body {
   .bar {
     padding-inline: 1rem;
   }
+
   .page,
   .footer {
     padding: 1rem;
@@ -43,7 +44,7 @@ body {
     justify-content: center;
   }
   .page__boks {
-    width: 100%;
+    margin-inline-end: 2rem;
   }
 
   .page__faglig-leder-boks {
@@ -101,6 +102,9 @@ body {
   text-decoration: none;
 }
 
+.bar__search {
+  color: white;
+}
 /* Dropdown knapp  */
 
 .bar__meny {
@@ -180,6 +184,9 @@ body {
   width: 100%;
 }
 
+.page__tekst {
+  text-align: center;
+}
 .page__trekk {
   margin: 1.2rem auto;
 }
@@ -194,6 +201,7 @@ body {
 
 .page__trekk-header {
   background-color: #213949;
+  background-image: linear-gradient(to left, #4b9cd3, #0077cc);
   color: white;
   padding: 1rem;
   cursor: pointer;
@@ -226,7 +234,6 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  text-align: left;
 }
 .page__liste {
   display: flex;
@@ -330,10 +337,20 @@ body {
   align-items: stretch;
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
   gap: 1rem;
+  box-shadow: 10px 14px 18px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
 }
 .page__studenthistorie-content,
 .page__studenthistorie-image {
   width: 50%;
+}
+
+.page__studenthistorie-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-inline: 1rem;
+  color: white;
 }
 
 .page__studenthistorie-image img {
@@ -351,8 +368,10 @@ body {
   display: flex;
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
   width: fit-content;
+  padding-inline: 1rem;
   gap: 2rem;
   text-decoration: none;
+  color: white;
 }
 
 /* Slutt av hovedsiden */
@@ -362,6 +381,7 @@ body {
 .footer {
   background-color: rgb(255, 220, 0);
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
+  color: white;
 }
 
 .footer__upper {
@@ -371,8 +391,8 @@ body {
   flex-wrap: wrap;
   border-bottom: 1px solid black;
 }
-.footer__upper h2 {
-  background-color: black;
+.footer__upper-link {
+  background-color: #e0f4ff;
   color: white;
   padding: 1rem;
 }
@@ -412,11 +432,12 @@ body {
   padding-inline-end: 0.5rem;
 }
 .footer__page a {
-  color: black;
-  text-decoration: none;
+  text-decoration: underline;
+  color: white;
 }
 .footer__page a:hover {
   text-decoration: underline;
+  color: turquoise;
 }
 
 /* Icons  */
