--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -24,14 +24,18 @@ body {
 }
 /* Legger til media query skjerm bredde for de med mindre bredde (mobilbrukere) */
 @media screen and (max-width: 800px) {
-  .bar {
-    padding-inline: 1rem;
+  .bar,
+  .bar__icon {
+    flex-direction: column;
+    gap: 1rem;
   }
 
+  .bar,
   .page,
   .footer {
     padding: 1rem;
   }
+
   .footer__page {
     display: flex;
     flex-direction: column;
@@ -80,6 +84,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   background-color: #0077cc;
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
 }
@@ -131,6 +136,7 @@ body {
   border: 1px solid grey;
   background-color: #f4f4f4;
   margin-block-start: 0.5rem;
+  z-index: 1000;
 }
 .bar__dropdownbtn:hover,
 .bar__dropdownbtn:active,
@@ -339,7 +345,14 @@ body {
   gap: 1rem;
   box-shadow: 10px 14px 18px rgba(0, 0, 0, 0.1);
   text-decoration: none;
+  transition: all 0.3s cubic-bezier(0.24, 0.59, 0.38, 0.94);
 }
+.page__studenthistorie:hover,
+.page__studenthistorie-boks a:hover {
+  box-shadow: 12px 16px 20px rgba(0, 0, 0, 0.3);
+  transform: scale(1.02);
+}
+
 .page__studenthistorie-content,
 .page__studenthistorie-image {
   width: 50%;
@@ -372,6 +385,7 @@ body {
   gap: 2rem;
   text-decoration: none;
   color: white;
+  transition: all 0.3s cubic-bezier(0.24, 0.59, 0.38, 0.94); /* Smidig overgang */
 }
 
 /* Slutt av hovedsiden */
