--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -281,6 +281,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f9f9f9;
   padding: 1.2rem;
   border-radius: 10px;
 }
@@ -293,10 +294,10 @@ body {
 }
 .page__wrapper-link p {
   font-size: 1.2rem;
-  color: #333;
+  color: #0056b3;
   margin: 0;
-  padding: 0.5rem 1rem;
-  background-color: #eef4fb;
+  padding: 1rem;
+  background-color: #eaf3ff;
   border: 2px solid #0077cc;
   border-radius: 8px;
   transition: background-color 0.3s, transform 0.2s;
@@ -314,19 +315,19 @@ body {
 .page__faglig-leder-boks {
   display: flex;
   text-decoration: none;
-  padding: 1rem;
+  padding: 1.5rem;
   border: 2px solid #0077cc;
   border-radius: 10px;
   background-color: #eef4fb;
 }
 .page__faglig-leder-boks:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  background-color: #e6f7ff;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+  background-color: #d9ecff;
 }
 
 .page__wrapper th,
 .page__wrapper td {
-  padding: 0.5rem;
+  padding: 0.8rem;
   border-bottom: 1px solid #ddd;
 }
 .page__wrapper th {
@@ -353,23 +354,28 @@ body {
   display: block;
   text-decoration: none;
   text-align: center;
-  border: 2px solid #0077cc;
+  border: 2px solid #4b9cd3;
   border-radius: 10px;
   padding: 1rem;
-  background-color: #eef4fb;
+  background-color: #ffffff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
 }
 .page__grid-item:hover {
-  transform: translate(-2px);
+  transform: translate(-3px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   background-color: #e6f7ff;
 }
+.page__tittel {
+  color: #0077cc;
+}
+
 .page__detaljer {
   list-style-type: none;
   padding: 0;
   margin: 0;
   font-size: 1rem;
-  color: #333;
+  color: black;
 }
 .page__detaljer li {
   margin: 0.5rem 0;
@@ -441,12 +447,15 @@ body {
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid white;
 }
 .footer__upper-link {
-  background-color: #e0f4ff;
-  color: white;
   padding: 1rem;
+  background-color: #213949;
+}
+.footer__upper-link a {
+  text-decoration: none;
+  color: white;
 }
 
 .footer__page {
@@ -489,7 +498,7 @@ body {
 }
 .footer__page a:hover {
   text-decoration: underline;
-  color: turquoise;
+  color: #213949;
 }
 
 /* Icons  */
