--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -574,3 +574,65 @@ body {
 .github__liste li {
   margin-block: 1rem;
 }
+
+/* Tilgjengelig nettside */
+
+.main__title {
+  margin: 2rem auto;
+  text-align: center;
+}
+
+.head__img {
+  display: grid;
+  /* grid-template-columns: repeat(2, 1fr); */
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem auto;
+}
+
+.head__img img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+}
+
+.head__img img:hover {
+  transform: scale(1.05);
+}
+
+.twoboxes {
+  grid-column: span 2;
+}
+
+.top__page {
+  background-image: url(../image/Bakgrunn_topp.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  padding: 4rem 1rem;
+  color: #fff;
+}
+
+.page__aboutproject {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 8px;
+  margin: 2rem auto;
+  padding: 2rem;
+  max-width: 40rem;
+  font-size: 1.2rem;
+  text-align: justify;
+}
+.page__text {
+  margin: 2rem auto;
+  max-width: 40rem;
+  padding: 1rem;
+  background: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+/* Slutt av accessibility */
