--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -61,31 +61,21 @@ body {
     display: block;
   }
 
-  .page__wrapper th {
-    font-size: 1rem;
-    margin-block-start: 1rem;
-  }
   .page__grid-container {
     grid-template-columns: 1fr !important;
     max-width: 100%;
   }
   .page__studenthistorie {
-    display: flex;
     flex-direction: column-reverse;
-  }
-  .page__studenthistorie-image,
-  .page__studenthistorie-content {
-    min-width: 100%;
   }
 }
 
 /* Heading */
 .bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between; /*Denne koden gjør at "boksene" i header skal dra så langt som mulig fra hverandre */
   align-items: center;
-  flex-wrap: wrap;
-  background-color: #0077cc;
+  flex-wrap: wrap; /*Hvis det er lite plass, så skal det dannes under */
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
 }
 
@@ -110,7 +100,7 @@ body {
 .bar__search {
   color: white;
 }
-/* Dropdown knapp  */
+/* Dropdown knapp (Alt som er om dropdown meny er hentet fra denne lenken) https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button */
 
 .bar__meny {
 }
@@ -150,7 +140,6 @@ body {
   color: black;
   padding: 0.75rem 1rem;
   display: block;
-  white-space: nowrap;
   text-decoration: none;
 }
 
@@ -177,9 +166,9 @@ body {
 
 .page__table tr {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; /*gjør at alle tr elementer skal være under hverandre */
   border-bottom: 1px solid black;
-  padding-block: 2rem 1rem;
+  padding-block: 2rem 1rem; /*lager "mellomrom" fra top og bottom */
 }
 
 .page__table th,
@@ -187,7 +176,6 @@ body {
   line-height: 1;
   font-size: 1.2rem;
   text-align: left;
-  width: 100%;
 }
 
 .page__tekst {
@@ -195,8 +183,10 @@ body {
 }
 
 /* Inputs og labels */
+
 .page__trekk {
-  margin: 1.2rem auto;
+  /*gir avstand til alt rundt */
+  margin: 2.5rem;
 }
 .page__trekk-item {
   border-radius: 5px;
@@ -204,25 +194,25 @@ body {
   overflow: hidden;
 }
 .page__trekk-item input[type="checkbox"] {
-  display: none;
+  display: none; /*det er en liten boks der man trykker så kommer menyen. vi har tatt det til none slik at den ikke er der */
 }
 
 .page__trekk-header {
-  background-color: #213949;
+  /* denne classen er for labels*/
   background-image: linear-gradient(to left, #4b9cd3, #0077cc);
   color: white;
-  padding: 1rem;
-  cursor: pointer;
+  padding: 1rem; /* Lager mellomrom slik at boksen blir større */
+  cursor: pointer; /*gjør sånn at brukere skal forstå lettere at man skal trykke på listene */
   font-weight: bold;
   display: flex;
-  align-items: center;
-  gap: 1rem;
+  align-items: center; /*har brukt flex og align items center slik at jeg får teksten også i midten */
+  gap: 1rem; /* Emojiene og tittelene har en liten avstand mellom  */
 }
 .page__trekk-content {
+  /*Denne classen inneholder alt infromasjon inne */
   max-height: 0;
-  overflow: hidden;
+  overflow: hidden; /*tok det med slik at hvis noe innhold kommer utenfor boksen, så skal det ikke være synlig*/
   background-color: #f9f9f9;
-  padding: 0 1rem;
 }
 .page__trekk-content p,
 .page__trekk-liste {
@@ -237,17 +227,17 @@ body {
 }
 .page__trekk-item input[type="checkbox"]:checked ~ .page__trekk-content {
   max-height: fit-content;
-  padding: 15px;
+  padding: 1rem;
 }
 
 .page__trekk-header::before {
-  /* content: "⬇️"; */
+  /*Denne classen med before, vil jeg at det skal også komme før tittelen*/
   content: "↪";
   font-size: 1.5rem;
   transform: rotate(0);
 }
 .page__trekk-item input[type="checkbox"]:checked + .page__trekk-header::before {
-  transform: rotate(-180deg);
+  transform: rotate(-180deg); /*Roter helt motsatt retning når du har trukket*/
 }
 
 .page__elementer {
@@ -281,7 +271,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.2rem;
   border-radius: 10px;
 }
 
@@ -289,7 +278,6 @@ body {
   text-decoration: none;
   color: #0077cc;
   display: inline-block;
-  margin-bottom: 1.5rem;
 }
 .page__wrapper-link p {
   font-size: 1.2rem;
@@ -326,7 +314,7 @@ body {
 
 .page__wrapper th,
 .page__wrapper td {
-  padding: 0.8rem;
+  padding: 0.5rem;
   border-bottom: 1px solid #ddd;
 }
 .page__wrapper th {
@@ -343,11 +331,9 @@ body {
 .page__grid-container {
   display: grid;
   /* https://travishorn.com/responsive-grid-in-2-minutes-with-css-grid-layout-4842a41420fe */
-  /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
   grid-template-columns: repeat(2, minmax(150px, 300px)); /*Lager 2 kolonner */
   justify-content: center;
   gap: 1rem;
-  padding: 1rem;
 }
 .page__grid-item {
   display: block;
@@ -384,9 +370,7 @@ body {
 
 .page__studenthistorie {
   display: flex;
-  align-items: stretch;
   background-image: linear-gradient(to right, #4b9cd3, #0077cc);
-  gap: 1rem;
   box-shadow: 10px 14px 18px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   transition: all 0.3s cubic-bezier(0.24, 0.59, 0.38, 0.94);
@@ -397,17 +381,12 @@ body {
   transform: scale(1.02);
 }
 
-.page__studenthistorie-content,
-.page__studenthistorie-image {
-  width: 50%;
-}
-
 .page__studenthistorie-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-inline: 1rem;
   color: white;
+  padding-inline: 1rem;
 }
 
 .page__studenthistorie-image img {
@@ -474,7 +453,6 @@ body {
 .footer__tableLeft tr {
   display: flex;
   flex-direction: column;
-  padding-block: 1rem;
 }
 
 .footer__tableMiddle th,
@@ -557,14 +535,14 @@ body {
 }
 
 .github__image img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
   border-radius: 8px;
   box-shadow: 10px 14px 18px rgba(0, 0, 0, 0.1);
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.25s ease;
 }
 .github__image img:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 .github__liste {
