--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -597,7 +597,7 @@ body {
 }
 
 .top__page {
-  background-image: url(../image/Bakgrunn_topp.jpg);
+  background-image: url(../image/images-Accesibility-page/Bakgrunn_topp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
