--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -68,6 +68,10 @@ body {
   .page__studenthistorie {
     flex-direction: column-reverse;
   }
+  .github__image img,
+  .accesibility__image img {
+    min-width: 100%;
+  }
 }
 
 /* Heading */
@@ -556,7 +560,7 @@ body {
 
 .github__image img,
 .accesibility__image img {
-  max-width: 100%;
+  width: 100%;
   border-radius: 8px;
   box-shadow: 10px 14px 18px rgba(0, 0, 0, 0.1);
   transition: transform 0.25s ease;
